<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">短信转发器</string>
    <string name="notification_content">不仅只转发短信，备用机必备神器！免费开源，禁止贩卖！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="del">删除</string>
    <string name="test">测试</string>
    <string name="confirm">确认</string>
    <string name="all">全部</string>
    <string name="select">选择</string>
    <string name="clone">一键克隆</string>
    <string name="setting">通用设置</string>
    <string name="about">关于软件</string>
    <string name="about_title">关于软件 %s</string>
    <string name="help">使用帮助</string>
    <string name="add">添加</string>
    <string name="editor">编辑</string>
    <string name="rule_setting">转发规则</string>
    <string name="sender_setting">发送通道</string>
    <string name="app_list">应用列表</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="log_tips">提示：置顶下拉刷新，长按删除单条，选项卡切换日志类型</string>
    <string name="rule_tips">提示：新建规则点击“添加”，长按删除/克隆，点击编辑已有</string>
    <string name="sender_tips">提示：新建发送通道点击“添加”，长按删除/克隆，点击编辑已有</string>
    <string name="app_tips">提示：点击复制APP的包名，长按则启动并跳转该APP</string>
    <plurals name="removed">
        <item quantity="other">"已删除 %d 项"</item>
    </plurals>
    <string name="undo">"撤销"</string>
    <string name="success_record">成功记录</string>
    <string name="failed_record">失败记录</string>
    <string name="version">当前版本</string>
    <string name="check_for_updates">检查新版本</string>
    <string name="auto_startup">开机启动</string>
    <string name="show_tips">帮助提示</string>
    <string name="open_source">开源仓库</string>
    <string name="synchronize_mirror">同步镜像</string>
    <string name="qq_group">互帮互助QQ群</string>
    <string name="qq_group1">①群：562854376</string>
    <string name="qq_group2">②群：31330492</string>
    <string name="join_qq_group1">加入①群</string>
    <string name="join_qq_group2">加入②群</string>
    <string name="cache">缓存大小</string>
    <string name="purge">清除缓存</string>
    <string name="checking">检查中…</string>
    <string name="up_to_date">已是最新版本！</string>
    <string name="cache_purged">缓存清理完成</string>
    <string name="unknown_qq_version">未安装手Q或安装的版本不支持！</string>
    <string name="forward_log">转发日志</string>
    <string name="bt_refresh_log">清空记录</string>
    <string name="delete_log_title">日志删除确认</string>
    <string name="delete_log_tips">确定删除该条日志记录?</string>
    <string name="delete_log_toast">该条日志记录已经删除！</string>
    <string name="details">详情</string>
    <string name="clear_logs_tips">确定要清空转发记录吗？</string>
    <string name="pull_tips">下拉可以刷新！</string>
    <string name="release_tips">松开可以刷新！</string>
    <string name="reflashing_tips">正在刷新…</string>
    <string name="no_sender_prompt">没有可用的发送通道，现在去添加发送通道?</string>
    <string name="setrule">设置短信转发规则</string>
    <string name="setrule_call">设置来电转发规则</string>
    <string name="setrule_app">设置APP通知转发规则</string>
    <string name="delete_rule_title">转发规则操作确认</string>
    <string name="delete_rule_tips">确定删除该条规则?</string>
    <string name="delete_rule_toast">该条规则已经删除！</string>
    <string name="new_sender_first">请选择发送通道（若无，请先添加）</string>
    <string name="add_sender_first">请先去设置发送通道页面添加</string>
    <string name="select_sender">选择发送通道</string>
    <string name="rule_tester">规则测试</string>
    <string name="new_rule">添加转发规则</string>
    <string name="new_sms_rule">添加短信转发</string>
    <string name="new_call_rule">添加来电转发</string>
    <string name="new_app_rule">添加应用转发</string>
    <string name="test_sim_slot">测试模拟的接收卡槽</string>
    <string name="test_phone_number">测试模拟的来源号码</string>
    <string name="test_msg_content">测试模拟的短信内容</string>
    <string name="test_package_name">测试模拟的APP包名</string>
    <string name="test_inform_content">测试模拟的通知内容</string>
    <string name="rule_category">规则分类</string>
    <string name="match_sim_slot">设置匹配的卡槽</string>
    <string name="match_field">设置匹配的字段</string>
    <string name="phone_number">手机号</string>
    <string name="package_name">APP包名</string>
    <string name="sms_content">短信内容</string>
    <string name="inform_content">通知内容</string>
    <string name="multiple_matches">多重匹配</string>
    <string name="match_type">设置匹配的模式</string>
    <string name="btn_is">是</string>
    <string name="btn_contain">包含</string>
    <string name="btn_not_contain">不包含</string>
    <string name="btn_start_with">开头</string>
    <string name="btn_end_with">结尾</string>
    <string name="btn_regex">正则匹配</string>
    <string name="match_value">设置匹配的值</string>
    <string name="invalid_sender">异常的发送通道类型，自动删除！</string>
    <string name="delete_sender_title">发送通道操作确认</string>
    <string name="delete_sender_tips">确定删除该条发送通道?</string>
    <string name="delete_sender_toast">该条发送通道已经删除！</string>
    <string name="add_sender_title">选择发送通道类型</string>
    <string name="not_supported">暂不支持这种转发</string>
    <string name="setdingdingtitle">设置钉钉机器人</string>
    <string name="setemailtitle">设置邮箱</string>
    <string name="setwebnotifytitle">设置Webhook</string>
    <string name="setqywxgrouprobottitle">设置企业微信群机器人</string>
    <string name="setqywxapptitle">设置企业微信应用</string>
    <string name="setbarktitle">设置Bark</string>
    <string name="setserverchantitle">设置Server酱·Turbo版</string>
    <string name="settelegramtitle">设置Telegram机器人</string>
    <string name="setsmstitle">设置SMS</string>
    <string name="setfeishutitle">设置飞书机器人</string>
    <string name="setpushplustitle">设置PushPlus</string>
    <string name="test_phone_num">19999999999</string>
    <string name="test_content">内容</string>
    <string name="test_sms">【京东】验证码为387481（切勿将验证码告知他人），请在页面中输入完成验证，如有问题请点击 ihelp.jd.com 联系京东客服</string>
    <string name="test_group_name">测试分组</string>
    <string name="failed_to_fwd">发送失败：</string>
    <string name="invalid_token">token 不能为空</string>
    <string name="invalid_email">邮箱参数不完整</string>
    <string name="invalid_bark_server">bark-server 不能为空</string>
    <string name="invalid_apiToken_or_chatId">机器人的ApiToken 和 被通知人的ChatId 都不能为空</string>
    <string name="invalid_sendkey">Server酱·Turbo版的 SendKey 不能为空</string>
    <string name="invalid_webserver">WebServer 不能为空</string>
    <string name="invalid_webhook">webHook 不能为空</string>
    <string name="invalid_at_mobiles">指定成员 不能为空 或者 选择@all</string>
    <string name="invalid_phone_num">接收手机号不能为空</string>
    <string name="new_sender">添加发送通道</string>
    <string name="set_bark_name">分组名称</string>
    <string name="set_bark_server">服务地址</string>
    <string name="set_bark_server_helper">如：https://bark.bms.ink/XXXXXXXX/</string>
    <string name="set_bark_icon">消息图标</string>
    <string name="set_bark_icon_helper">(可选)，如：http://day.app/assets/images/avatar.jpg</string>
    <string name="set_name">设置名称</string>
    <string name="dingding_token">Token</string>
    <string name="dingding_token_helper">如: https://oapi.dingtalk.com/robot/send?access_token=XXXXXX 中的 XXXXXX</string>
    <string name="dingding_secret">Secret</string>
    <string name="dingding_secret_helper">(选填), 如: 2J64srstE9CBKglKTLZsxEqYQQXSSWGY</string>
    <string name="dingding_at">@某人</string>
    <string name="dingding_at_helper">某人的手机号，多个用逗号分开 例如：18888888888,19999999999</string>
    <string name="email_server_category">服务器</string>
    <string name="email_account_category">账号</string>
    <string name="email_protocol">协议类型</string>
    <string name="email_smtp">SMTP</string>
    <string name="email_imap">IMAP</string>
    <string name="email_host">地址</string>
    <string name="smtp_port">端口</string>
    <string name="enable_ssl">开启SSL</string>
    <string name="email_account">发件人邮箱</string>
    <string name="email_password">登录密码/授权码</string>
    <string name="email_nickname">发件人昵称</string>
    <string name="email_to">收件地址</string>
    <string name="email_title">邮件主题</string>
    <string name="feishu_webhook">Webhook</string>
    <string name="feishu_webhook_helper">https://open.feishu.cn/open-apis/bot/v2/hook/xxxxxxxxxxxxxxxxx</string>
    <string name="feishu_secret">Secret</string>
    <string name="feishu_secret_helper">(选填), 如: 2J64srstE9CBKglKTLZsxEqYQQXSSWGY</string>
    <string name="Corp_ID">企业ID</string>
    <string name="Agent_ID">应用AgentId</string>
    <string name="App_Secret">应用Secret</string>
    <string name="is_at_all">是否@all</string>
    <string name="specified_member">指定成员</string>
    <string name="at_all">\@all</string>
    <string name="specified_member_tips">Tip：指定接收消息的成员，成员ID列表（多个接收者用‘|’分隔，最多支持1000个）</string>
    <string name="QYWXGroupRobotWebHook">WebHook地址</string>
    <string name="QYWXGroupRobotWebHookHelper">如：https://qyapi.weixin.qq.com/cgixx?key=xxx</string>
    <string name="ServerChanSendKey">SendKey</string>
    <string name="TelegramApiToken">机器人token</string>
    <string name="TelegramChatId">ChatId</string>
    <string name="WebNotifyMethod">请求方式</string>
    <string name="WebNotifyWebServer">请求地址</string>
    <string name="WebNotifyWebServerHelper">如：https://a.b.com/msg?token=xyz</string>
    <string name="WebNotifyWebParams">请求参数</string>
    <string name="WebNotifyWebParamsHelper">如：payload=%7B%22text%22%3A%22[msg]%22%7D [msg]将被替换成短信内容。\n支持Json格式，例如：{"text":[msg]}。\n注意：除JSON格式外，msg会自动进行UTF-8编码</string>
    <string name="WebNotifySecret">Secret</string>
    <string name="WebNotifySecretHelper">置空则不计算sign</string>
    <string name="SmsSimSlot">发送卡槽</string>
    <string name="same_source">原进原出</string>
    <string name="SmsMobiles">接收手机</string>
    <string name="SmsMobileHelper">多个号码以半角分号分隔，例如：15888888888;19999999999</string>
    <string name="OnlyNoNetwork">仅当无网络时启用</string>
    <string name="device_name">设备名称</string>
    <string name="sim1_remark" tools:ignore="Typos">SIM1备注</string>
    <string name="sim2_remark" tools:ignore="Typos">SIM2备注</string>
    <string name="carrier_mobile">运营商_手机号</string>
    <string name="low_power_alarm_threshold">电量预警阈值(%)</string>
    <string name="low_power_alarm_threshold_tips">取值范围：0–100，0禁用</string>
    <string name="retry_interval">每次重试间隔(秒)</string>
    <string name="retry_interval_tips">接口请求失败后将重试5次</string>
    <string name="forward_sms">转发短信广播</string>
    <string name="forward_sms_tips">总开关，请授予读取短信、通知类短信、发送短信等权限</string>
    <string name="forward_missed_calls">转发未接来电</string>
    <string name="forward_missed_calls_tips">总开关，请授予读取通话记录、联系人等权限</string>
    <string name="forward_app_notify">转发应用通知</string>
    <string name="forward_app_notify_tips">总开关，请先授予通知使用权</string>
    <string name="enable_custom_templates">启用自定义模版</string>
    <string name="enable_custom_templates_tips">优先级：转发规则的自定义模板 > 全局自定义模版 > 默认</string>
    <string name="enable_regex_replace">启用正则替换内容</string>
    <string name="enable_regex_replace_tips">格式：正则表达式===替换结果，每行一个规则.\n例如：(\\d{3})\\d{4}(\\d{4})===$1****$2</string>
    <string name="regex_check_tips">正则替换检查：第 %d 行格式错误！格式：正则表达式===替换结果</string>
    <string name="enable_exclude_from_recents">不在最近任务列表中显示</string>
    <string name="enable_exclude_from_recents_tips">开启后，有效避免手动误杀进程，利于保活</string>
    <string name="custom_templates">转发信息模版</string>
    <string name="pushplus_token">用户令牌</string>
    <string name="pushplus_topic">群组编码</string>
    <string name="pushplus_template">发送模板</string>
    <string name="pushplus_channel">发送渠道</string>
    <string name="pushplus_webhook">webhook编码</string>
    <string name="pushplus_callback">回调地址</string>
    <string name="pushplus_valid_time">有效时间(秒)</string>
    <string name="monitor_battery_status_changes">监听电池状态变化</string>
    <string name="proxy">代理</string>
    <string name="proxy_settings">代理设置</string>
    <string name="hostname">主机名</string>
    <string name="port">端口号</string>
    <string name="proxy_authenticator">代理身份验证</string>
    <string name="username">用户</string>
    <string name="password">密码</string>
    <string name="direct_boot_aware">允许锁屏时切换</string>
    <string name="direct_boot_aware_summary">选中的配置信息会不那么安全</string>
    <string name="add_config_methods_scan_qr_code">扫描二维码</string>
    <string name="add_config_methods_manual_settings">手动设置</string>
</resources>