<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="name"
        app:icon="@drawable/ic_round_title_24"
        app:title="@string/set_name"
        app:useSimpleSummaryProvider="true"/>

    <PreferenceCategory app:title="@string/email_account_category">

        <EditTextPreference
            app:key="fromEmail"
            app:icon="@drawable/ic_round_alternate_email_24"
            app:title="@string/email_account"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="pwd"
            app:icon="@drawable/ic_round_vpn_key_24"
            app:title="@string/email_password"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="username"
            app:icon="@drawable/ic_round_account_box_24"
            app:title="@string/email_nickname"
            app:useSimpleSummaryProvider="true"/>


        <EditTextPreference
            app:key="toEmail"
            app:icon="@drawable/ic_round_alternate_email_24"
            app:title="@string/email_to"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="subject"
            app:icon="@drawable/ic_round_subject_24"
            app:title="@string/email_title"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/email_server_category">
        <ListPreference
            app:key="protocol"
            app:icon="@drawable/ic_round_https_24"
            app:title="@string/email_protocol"
            app:entries="@array/email_protocol"
            app:entryValues="@array/email_protocol_value"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="host"
            app:icon="@drawable/ic_round_router_24"
            app:title="@string/email_host"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="port"
            app:icon="@drawable/ic_round_electrical_services_24"
            app:title="@string/smtp_port"
            app:useSimpleSummaryProvider="true"/>


        <SwitchPreference
            app:key="ssl"
            app:icon="@drawable/ic_round_https_24"
            app:title="@string/enable_ssl"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>



</PreferenceScreen>