<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="name"
        app:icon="@drawable/ic_round_title_24"
        app:title="@string/set_name"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        app:key="method"
        app:icon="@drawable/ic_round_http_24"
        app:title="@string/WebNotifyMethod"
        app:useSimpleSummaryProvider="true"/>

    <EditTextPreference
        app:key="server"
        app:icon="@drawable/ic_round_link_24"
        app:title="@string/WebNotifyWebServer"
        app:useSimpleSummaryProvider="true"/>


    <EditTextPreference
        app:key="params"
        app:icon="@drawable/ic_round_perm_data_setting_24"
        app:title="@string/WebNotifyWebParams"
        app:useSimpleSummaryProvider="true"/>


    <EditTextPreference
        app:key="secret"
        app:icon="@drawable/ic_round_vpn_key_24"
        app:title="@string/WebNotifySecret"
        app:useSimpleSummaryProvider="true"/>

</PreferenceScreen>