<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.idormy.sms.forwarder.MainActivityBak">

    <item
        android:alphabeticShortcut="n"
        android:id="@+id/add"
        android:icon="@drawable/ic_round_note_add_24"
        android:title="@string/add"
        app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/action_scan_qr_code"
                    android:title="@string/add_config_methods_scan_qr_code"/>
            <item
                    android:id="@+id/action_manual_settings"
                    android:title="@string/add_config_methods_manual_settings"
                    android:alphabeticShortcut="n"
                    app:alphabeticModifiers="CTRL|SHIFT"/>
        </menu>
    </item>
</menu>
